<resources>
    <string name="app_name">Near Deal</string>
    <string name="explore">Explore</string>
    <string name="shops">Shops</string>
    <string name="nearby_locations">Nearby locations</string>
    <string name="categories">Categories</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="see_all">See All</string>
    <string name="offers">Offers</string>
    <string name="filters">FILTERS</string>
    <string name="any">Any</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="devices">Devices</string>
    <string name="gadgets">Gadgets</string>
    <string name="tools">Tools</string>
    <string name="price_range">Price Range</string>
    <string name="confirm">Confirm</string>
    <string name="change_photo">Change photo</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birth_date">Birth Date</string>
    <string name="hint_email">eg: yourname@gmail.com</string>
    <string name="hint_username">eg: john doe</string>
    <string name="birth_date_hint">eg. 17/04/1980</string>
    <string name="edit">Edit</string>
    <string name="shop_name">Shop Name</string>
    <string name="hint_shop_name">eg: Prism 2 print store</string>
    <string name="locations">Locations</string>
    <string name="description">Description</string>
    <string name="description_hint">Description...</string>
    <string name="products">Products</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_hint">eg: +919909900089</string>
    <string name="add_location">Add location</string>
    <string name="add_location_hint">San Stefano branch</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_product">Add product</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_hint">eg. Men shoe</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="price_hint">Price (EGP)</string>
    <string name="details">Details</string>
    <string name="nearby_locations_search_hint">Search in nearby shops</string>
    <string name="product_search_hint">What are you looking for ?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="new_user">New user?</string>
    <string name="already_a_user">Already a user?</string>
    <string name="product_image">Product Image</string>
    <string name="get_directions">Get directions</string>
    <string name="location_permission_rationale">To get nearby shops we need your location</string>
    <string name="storage_permission_rationale">To choose an image we need storage access</string>
    <string name="logout">logout</string>
    <string name="retry">Retry</string>

    <!-- Input Error messages -->
    <string name="email_input_error">Wrong email address \nPlease enter a proper email</string>
    <string name="username_input_error">Username must contain characters only [A-Z,a-z]</string>
    <string name="password_input_error">Password must be :- \n - its size must be at least eight \n - a digit must occur at least once \n - a lower case letter must occur at least once \n - an upper case letter must occur at least once \n - a special character [@#$%^&amp;+=] must occur at least once \n - no whitespace allowed </string>
    <string name="confirm_password_input_error">Password and confirm password must be the same</string>
    <string name="birthdate_input_error">Birthdate must not be empty \nAge must be 12 or more</string>

    <!-- Error messages used in Error Handler-->
    <string name="no_internet_connection_error">No internet connection</string>
    <string name="input_error">Input error</string>
    <string name="server_error">Server error</string>
    <string name="bad_response_error">Bad server response</string>
    <string name="unknown_sign_user_error">Unknown sign user error</string>
    <string name="need_sign_in_error">Need to sign in first</string>
    <string name="failed_create_user_error">Failed to create user</string>
    <string name="failed_sign_in_error">Failed to sign in</string>
    <string name="failed_update_email_error">Failed to update email address</string>
    <string name="failed_update_password_error">Failed to update password</string>
    <string name="internet_connection_unstable_error">Pour internet connection\nPlease try again</string>
    <string name="request_timed_out_error">Request timed out\nPlease try again</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="turn_on_your_location">Please turn on your location...</string>
</resources>