<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".Views.Fragments.EditMyShopFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/confirm"
        android:textColor="?colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shop_image"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_shop_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/change_photo_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/change_photo"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:chipBackgroundColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_image" />

    <TextView
        android:id="@+id/shop_name_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/shop_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_photo_chip" />

    <EditText
        android:id="@+id/shop_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/shop_name"
        android:background="@drawable/shop_edit_text_background"
        android:hint="@string/hint_shop_name"
        android:inputType="textAutoComplete"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_name_header_text_view" />

    <TextView
        android:id="@+id/mobile_number_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/mobile_number"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_name_edit_text" />

    <EditText
        android:id="@+id/mobile_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/shop_name"
        android:background="@drawable/shop_edit_text_background"
        android:hint="@string/mobile_number_hint"
        android:inputType="phone"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile_number_header_text_view" />

    <TextView
        android:id="@+id/description_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile_number_edit_text" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/description_hint"
        android:background="@drawable/shop_edit_text_background"
        android:hint="@string/description_hint"
        android:inputType="textAutoComplete"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_header_text_view" />

    <TextView
        android:id="@+id/locations_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/locations"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_edit_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/locations_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="19dp"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locations_header_text_view"
        tools:itemCount="3"
        tools:listitem="@layout/locations_list_item" />

    <TextView
        android:id="@+id/add_location_layout_initializer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_location"
        android:textColor="?colorPrimary"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locations_recycler" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locations_recycler">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="26dp"
            android:background="@drawable/shop_edit_text_background"
            android:paddingHorizontal="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/location_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/add_location_hint"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/add_location_hint"
                android:inputType="textAutoComplete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/location_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="43dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/add"
            android:textColor="?colorPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_layout" />

        <TextView
            android:id="@+id/cancel_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="23dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cancel"
            android:textColor="@color/burnt_sienna"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/add_location"
            app:layout_constraintTop_toBottomOf="@id/location_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/products_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/products"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_location_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="19dp"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/products_header_text_view"
        tools:itemCount="1"
        tools:listitem="@layout/products_list_item" />

    <TextView
        android:id="@+id/add_product_layout_initializer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_product"
        android:textColor="?colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/products_recycler" />

</androidx.constraintlayout.widget.ConstraintLayout>